<resources>
    <string name="app_name">My opinion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Делись своими мнениями обо всем !</string>
    <string name="hi">Привет</string>
    <string name="shareBtnText">+ Делиться мнением</string>
    <string name="Continue">Далее</string>
    <string name="selectType">Выберите тип</string>
    <string name="back">Назад</string>
    <string name="notSelectedText">Вы не выбрали</string>
    <string name="global">Глобальные мнении</string>
    <string name="cancel">Выйти</string>
    <string name="new_opinion">Новая мнения</string>
    <string name="author_name">Имя автора</string>
    <string name="shortDescription">Краткое описание темы</string>
    <string name="date">Дата</string>
    <string name="titleTxt">Заголовок</string>
    <string name="write_here">А вот здесь пишите…</string>
    <string name="exact_theme_opinion">Именно о чем будет идти речь:</string>
    <string name="success">Успешно опубликовано !</string>
    <string name="success_reported">Скоро мы решим вашу проблему. Ивиняемся за причиненные неудобства !</string>
    <string name="will_continur_theme">Будет идти речь про :</string>
    <string name="forWhomMain">Для кого это мнения :</string>
    <string name="dateMain">Дата мнении :</string>
    <string name="bodyMain">Текст :</string>
    <string name="userAnonym">Пользователь</string>
    <string name="sentForAnalyze">Отправлено к проверке</string>
    <string name="copied">Скопировано в буфер обмена</string>

    <string name="error_register_input">1) Логин дожен включать в себе (@gmail.com)   2) Пароль должен состоять не менее чем из 7 символов </string>


    <string name="life">Жизнь</string>
    <string name="Business">Бизнес</string>
    <string name="Carreer">Карьера</string>
    <string name="Tech">ИТ</string>
    <string name="Family">Семья</string>
    <string name="Love">Любовь</string>
    <string name="Astronomy">Астрономия</string>
    <string name="Sport">Спорт</string>

    <string name="noInternet">Нет подключения к интернету, пожалуйста проверьте соединение.</string>
    <string name="fireBaseError">Нет подключения к интернету, пожалуйста проверьте соединение.</string>
    <string name="short_description">Описание : </string>
    <string name="decription">Описание…</string>
    <string name="write_comment_here">Пишите здесь…</string>
    <string name="comment_toolbar_tv">Комментарии</string>
    <string name="no_comments">Здесь пока ничего нет</string>
    <string name="your_profile">Ваш профиль</string>


    <string name="added_to_favorites">Добавлено в прочитанные</string>
    <string name="deleted_from_favorites">Удалено из избранных</string>
    <string name="inValidInput">Пожалуйста, заполните все поля.</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="create_to_continue">Создайте аккаунт, чтобы продолжить.</string>
    <string name="welcomeSignIN">Добро пожаловать !</string>
    <string name="loginHint">Логин</string>
    <string name="loginBtnText">Войти</string>
    <string name="create_with_google">Создать через Google</string>
    <string name="password_hint">Пароль</string>
    <string name="searchingItem">Поиск…</string>
    <string name="notes">Новости</string>
    <string name="soon_update">Скоро обновление</string>
    <string name="addComment">Оставить коментарии:</string>
    <string name="my_opinions_toolbar_tv">Мои мнении</string>
    <string name="all_opinions">Все мнении : </string>
    <string name="fill_data_text">Изменить данные</string>
    <string name="sign_in_for_continue">Войдите, чтобы продолжить.</string>
    <string name="date_of_registration">Последнее изменение :</string>
    <string name="report_tv">Сообщить</string>
    <string name="copy_tv">Скопировать</string>
    <string name="describe_your_problem">Опишите проблему</string>
    <string name="date_problem">Дата :</string>
    <string name="from">От :</string>
    <string name="what_is_problem">В чем проблема ?</string>
    <string name="report_about_problem">Сообщить о проблеме</string>
    <string name="send_problem">Отправить</string>
    <string name="read_more">Читать дальше…</string>
    <string name="disable_password">Отключить пароль</string>
    <string name="author">Created by Xoldarov Temur</string>

    <string name="politics_text">Перед тем как установить и начать использование мобильного приложения «My Opinion», убедительная просьба внимательно ознакомиться с настоящей Политикой конфиденциальности и правилами пользования Приложением, чтобы понять наши правила и практику в отношении информации пользователей и то, как мы будем ее собирать и использовать. Соглашаетесь с условиями сбора персональных данных и иной, указанной ниже информации, даете полное и безусловное согласие на обработку информации, в том числе на трансграничную передачу Ваших персональных данных,
         При загрузке, регистрации или использовании данного Приложения, Пользователь предоставляет определенную запрашиваемую информацию, которая может включать в себя имя, адрес электронной почты или другую контактную информацию (далее — «личные данные»). Мы также собираем любую информацию, которую Пользователь предоставляет при заполнении любых полей в Приложении, сообщениях о проблемах функционирования и использования сервисов Приложения, отправке Пользователем писем и сообщений через Приложение. Компания не может контролировать действия третьих лиц, с которыми Пользователь делится своими замечаниями участника. Таким образом, Мы не можем и не гарантируем, что Ваши замечания участника не будут рассматриваться посторонними лицами, даже при использовании Приложения в «ограниченном режиме» (см. Пользовательское соглашение). Кроме того, Мы не можем и не гарантируем, что использование анонимной функции в Приложении предоставит Пользователю фактическую анонимность.</string>
    <string name="agree_politics">Принимаю условия пользовательского \nсоглашения.</string>
    <string name="viewed">Просмотренные</string>
    <string name="title_activity_editing">EditingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="editing">Изменение</string>
    <string name="downloading">Загрузка...</string>
</resources>