<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/clubHouse">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:padding="15dp"

        >

        <TextView
            android:id="@+id/exitTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/green"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="?android:attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editing"
            android:textSize="25sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="right|center"
        android:padding="10dp"
        android:layout_height="?android:attr/actionBarSize">

        <com.skydoves.elasticviews.ElasticImageView
            android:id="@+id/publishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_opinion"
            android:textSize="25sp"
            app:imageView_duration="100"
            app:tint="@color/blueColor"
            android:src="@drawable/ic_baseline_done_24"
            android:textColor="@color/black"
            android:tint="@color/black"
            />

    </LinearLayout>


</RelativeLayout>