<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signIn_layout"
    android:background="@color/clubHouse"
    tools:context=".presentation.registration.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeSignIN"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_to_continue"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <EditText
            android:id="@+id/loginInputText"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingEnd="15dp"
            android:hint="@string/loginHint"
            android:paddingStart="15dp"
            android:background="@drawable/edit_text_style"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordInputText"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="28dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/password_hint"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="@+id/loginInputText"
            app:layout_constraintStart_toStartOf="@+id/loginInputText"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInBtn"
            android:layout_width="0dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/loginBtnText"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintWidth_percent="0.5"
            android:background="@drawable/btn_style"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputText" />


        <com.skydoves.elasticviews.ElasticImageView
            android:id="@+id/loginWithGoogleBtn"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="34dp"
            android:src="@drawable/google2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/create_with_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWithGoogleBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>