<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clubHouse"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcomeTv"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25sp"
        android:drawablePadding="10dp"
        android:text="@string/hi"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_sentiment_satisfied_alt_24" />


    <Button
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_style"
        android:padding="10dp"
        android:text="@string/shareBtnText"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:tint="#302D2D" />

    <com.skydoves.elasticviews.ElasticImageView
        android:id="@+id/myOpinions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/ic_baseline_notes_24"
        android:tint="#302D2D"
        app:imageView_duration="100" />

    <com.skydoves.elasticviews.ElasticImageView
        android:id="@+id/reportBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/ic_baseline_record_voice_over_24"
        android:tint="#302D2D"
        app:imageView_duration="100" />

</RelativeLayout>