<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clubHouse"
    tools:context=".fragments.ReportFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/report_toolbar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_layout"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/problemTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="left|top"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:maxLength="50"
                android:hint="@string/what_is_problem"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_layout"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">

            <EditText
                android:id="@+id/problemBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="left|top"
                android:hint="@string/describe_your_problem"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/problemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/date_problem"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10" />

        <TextView
            android:id="@+id/problemDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="01.01.2021"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/problemDate"
            app:layout_constraintStart_toEndOf="@+id/problemDate"
            app:layout_constraintTop_toTopOf="@+id/problemDate"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/from"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/problemDate" />

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="temuruz2003@gmail.com"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/userName"
            app:layout_constraintStart_toEndOf="@+id/userName"
            app:layout_constraintTop_toTopOf="@+id/userName"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendBtn"
            android:layout_width="150dp"
            android:layout_marginTop="120dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/send_problem"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>