<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/success_dialog"
    android:elevation="3dp"
    android:focusable="true"
    android:clickable="true"
    android:id="@+id/container"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:background="@drawable/success_dialog"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/readBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/writeCommentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addComment"
            android:layout_margin="5dp"
            android:textColor="@color/blueColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="80dp" />

        <com.skydoves.elasticviews.ElasticImageView
            android:id="@+id/typeImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:imageView_duration="300"
            android:layout_margin="10dp"
            android:src="@drawable/astronomy"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="0"
            android:textColor="@color/blueColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/writeCommentBtn"
            app:layout_constraintStart_toEndOf="@+id/writeCommentBtn"
            app:layout_constraintTop_toTopOf="@+id/writeCommentBtn" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Xoldarov Temur"
            android:maxLines="1"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:maxLength="20"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/typeImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="Astronomy"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toEndOf="@+id/typeImageView"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="monospace"
            android:text="@string/short_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <!-- android:fontFamily="monospace"-->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/decription"
            android:textStyle="bold"
            android:textColor="#A69C9C"
            android:fontFamily="monospace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.skydoves.elasticviews.ElasticImageView
        android:id="@+id/shareImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_margin="10dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_baseline_share_24"
        android:tint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>